--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <head>
   <!--Google Analytics-->
   <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-85207562-1', 'auto');
-  ga('send', 'pageview');
-
+    ga('create', 'UA-85207562-1', 'auto');
+    ga('send', 'pageview');
   </script>
   <!--End-->
 
@@ -20,7 +19,7 @@
 
   <title>Christina Zhu</title>
 
-  <!-- Custom styles for this template -->
+  <!-- Custom styles -->
 
   <!-- Favicon -->
   <link rel="icon" href="favicon.jpg">
@@ -41,176 +40,184 @@
 </head>
 
 <body>
-  <div>
-    <div class="content">
-      <div id="photo"><img id="pic" src="assets/img/bwavatarofme.png"></div>
-      <div class="column">
-        <center><img src="http://i748.photobucket.com/albums/xx122/luuuh/divisorias/barinhas25.gif"></center>
-        <div id="title">CHRISTINA ZHU<br></div>
-        <div id="icons">
-          <a class="icon red" href="http://twitter.com/cszhu"><i class="fa fa-lg fa-twitter"></i></a>
-          <a class="icon yellow" href="http://github.com/cszhu"><i class="fa fa-lg fa-github"></i></a>
-          <a class="icon green" href="http://linkedin.com/in/christinaszhu"><i class="fa fa-lg fa-linkedin"></i></a>
-          <a class="icon blue" href="mailto:cszhu@ucdavis.edu"><i class="fa fa-lg fa-envelope"></i></a>
-          <a class="icon purple" href="http://cszhu.github.io/cszhuResume.pdf"><i class="fa fa-lg fa-file"></i></a>
-        </div>
+  <div class="content">
+    <div id="photo">
+      <img id="pic" src="assets/img/bwavatarofme.png">
+    </div>
+    <div class="column">
+      <center><img src="assets/img/rainbow.gif"></center>
+      <div id="title">CHRISTINA ZHU<br></div>
+      <div id="icons">
+        <a class="icon red" href="http://twitter.com/cszhu"><i class="fa fa-lg fa-twitter"></i></a>
+        <a class="icon yellow" href="http://github.com/cszhu"><i class="fa fa-lg fa-github"></i></a>
+        <a class="icon green" href="http://linkedin.com/in/christinaszhu"><i class="fa fa-lg fa-linkedin"></i></a>
+        <a class="icon blue" href="mailto:cszhu@ucdavis.edu"><i class="fa fa-lg fa-envelope"></i></a>
+        <a class="icon purple" href="http://cszhu.github.io/resume.pdf"><i class="fa fa-lg fa-file"></i></a>
       </div>
     </div>
+  </div>
 
-    <div class="content">
-      <div id="text">
+  <div class="content">
+    <div id="text">
       <div id="nav" class="card">
         <div id="work" class="navbar"><a href="index.html"><h3>Work</h3></a></div>
         <div id="hack2" class="navbar"><a href="more.html"><h3>Hack</h3></a></div>
       </div>
-        <div id="section0">
 
-          <h3>Hello!</h3>
-          <p>I'm Christina! I'm studying Computer Science at UC Davis, graduating June 2017. Here are some things that I'm passionate about:
-            <ul>
-            <li> Developer advocacy 
-            <li> Diversity in tech
-            <li> Hackathons
-            <li> Startups and entrepreneurship
-            </ul>
-          Feel free to reach out!! I love meeting new people! <img src="http://67.media.tumblr.com/tumblr_m9gclhODl61qzckow.gif">
+      <div id="section0"> <!-- SECTION 0 -->
+        <h3>Hello!</h3>
+        <p>I'm Christina! I'm studying Computer Science at UC Davis, graduating June 2017. Here are some things that I'm passionate about:
+          <ul>
+            <li> Developer advocacy </li>
+            <li> Diversity in tech </li>
+            <li> Hackathons </li>
+            <li> Startups and entrepreneurship </li>
+          </ul>
+          Feel free to reach out!! I love meeting new people!
           <br>
-          </div>
-          <br>
-          <div id="section">
-            <h3>Work</h3>
+        </p>
+      </div> <!-- SECTION 0 -->
 
-            <div class="card">
-              <img src="http://66.media.tumblr.com/tumblr_m9pddeBlxk1qid2nw.gif">
-              <div class="cardInfo">
-                <p>Application Developer</p>
-                <p><a href="http://www.caes.ucdavis.edu/">UC Davis CAES</a> <span class="sub">- 2016 ~ present</span></p>
-              </div>
-            </div>
+      <br>
 
-            <div class="card">
-              <img src="http://67.media.tumblr.com/tumblr_ma6uxvpsaB1qid2nw.gif">
-              <div class="cardInfo">
-                <p>Software Engineering Intern</p>
-                <p><a href="http://amazon.com">Amazon</a> <span class="sub">- 2016</span></p>
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="http://66.media.tumblr.com/tumblr_ma6tfdeIpa1qid2nw.gif">
-              <div class="cardInfo">
-                <p>Devangelist (Remote)</p>
-                <p><a href="http://blog.clarifai.com/introducing-the-clarifai-champions/"> Clarifai Champions</a><span class="sub"> - 2016</span></p>
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="http://67.media.tumblr.com/tumblr_ma6tgaOpdx1qid2nw.gif">
-              <div class="cardInfo">
-                <p>Software Engineering Intern</p>
-                <p><a href="http://monetate.com">Monetate</a> <span class="sub">- 2015</span></p>
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="http://66.media.tumblr.com/tumblr_m0mypsVrSH1qcfn0j.gif">
-              <div class="cardInfo">
-                <p><i>Intro To Programming</i> TA</p>
-                <p><a href="http://pennhealthx.com">Penn HealthX</a> <span class="sub">- 2015</span></p>
-              </div>
-            </div>
-
-          </div>
-          <br>
-          <div id="section2">
-            <h3>Things I Do</h3>
-
-            <div class="card">
-              <img src="http://65.media.tumblr.com/tumblr_ma6tf5yYJt1qid2nw.gif">
-              <div class="cardInfo">
-                <p>Co-Founder</p>
-                <p><a href="http://hackdavis.io">HackDavis</a> <span class="sub"> - 2015 ~ present</span></p>
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="http://66.media.tumblr.com/tumblr_ma6tgh9CKV1qid2nw.gif">
-              <div class="cardInfo">
-                <p>Instructor</p>
-                <p><a href="http://girlswhocode.com">Girls Who Code</a><span class="sub"> - 2015 ~ 2016</span></p>
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="http://67.media.tumblr.com/tumblr_m0myq4go1x1qcfn0j.gif">
-              <div class="cardInfo">
-                <p>Officer</p>
-                <p><a href="http://daviscsclub.org">Davis CS Club</a><span class="sub"> - 2015</span></p>
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="http://67.media.tumblr.com/tumblr_m9pearwzkj1qid2nw.gif">
-              <div class="cardInfo">
-                <p>Business & Finance Commissioner</p>
-                <p><a href="https://asucd.ucdavis.edu/government/legislative/commissions/business-and-finance-commission/">ASUCD</a><span class="sub"> - 2013 ~ present</p>
-              </div>
-            </div>
-          </div>
-
-          <br>
-          <div id="section3">
-            <h3>Honors</h3>
-
-            <div class="card">
-              <img src="http://67.media.tumblr.com/tumblr_m0myoh2vqJ1qcfn0j.gif">
-              <div class="cardInfo">
-                <p>Grace Hopper Scholar</p>
-                <p><a href="http://anitaborg.org/awards-grants/ghc-scholarship-grants/">Anita Borg Institute</a><span class="sub"> - 2016</span></p>
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="http://66.media.tumblr.com/tumblr_ma6tbjFbOS1qid2nw.gif">
-              <div class="cardInfo">
-                <p>Best Veteran's Hack</p>
-                <p><a href="http://devpost.com/software/auxi">CalHacks</a><span class="sub"> - 2016</span></p>
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="http://66.media.tumblr.com/tumblr_m3j73uCEMi1qid2nw.gif">
-              <div class="cardInfo">
-                <p>1st place Amazon Alexa<br>2nd place IBM BlueMix</p>
-                <p><a href="http://devpost.com/software/airscribe">TreeHacks</a><span class="sub"> - 2016</span></p>
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="http://65.media.tumblr.com/tumblr_m9pdbpGWWe1qid2nw.gif">
-              <div class="cardInfo">
-                <p>Engineering Diversity Scholar</p>
-                <p><a href="http://boxdiversityscholarship.com">Box</a><span class="sub"> - 2015</span></p>
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="http://66.media.tumblr.com/tumblr_m0myqbMzsa1qcfn0j.gif">
-              <div class="cardInfo">
-                <p>PennApps Fellow</p>
-                <p><a href="http://pennappsfellows.com">PennApps Fellows</a><span class="sub"> - 2015</span></p>
-              </div>
-            </div>
-
-            <div class="card">
-              <img src="http://67.media.tumblr.com/tumblr_m3j74nFJao1qid2nw.gif">
-              <div class="cardInfo">
-                <p>Twitter Flight Scholarship</p>
-                <p><a href="https://dev.twitter.com/flight/2015">Twitter Flight</a><span class="sub"> - 2015</span></p>
-              </div>
-            </div>
-            
+      <div id="section"> <!-- SECTION 1 -->
+        <h3>Work</h3>
+        <div class="card">
+          <img src="assets/img/ylw.png">
+          <div class="cardInfo">
+            <p>Application Developer</p>
+            <p><a href="http://www.caes.ucdavis.edu/">UC Davis CAES</a><br><span class="sub"> - 2016 ~ present</span></p>
           </div>
         </div>
-      </div>
-    </body>
+
+        <div class="card">
+          <img src="assets/img/ylw.png">
+          <div class="cardInfo">
+            <p>Software Engineering Intern</p>
+            <p><a href="http://amazon.com">Amazon</a> <span class="sub">- 2016</span></p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/img/ylw.png">
+          <div class="cardInfo">
+            <p>Devangelist (Remote)</p>
+            <p><a href="http://blog.clarifai.com/introducing-the-clarifai-champions/"> Clarifai Champions</a><span class="sub"> - 2016</span></p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/img/ylw.png">
+          <div class="cardInfo">
+            <p>Software Engineering Intern</p>
+            <p><a href="http://monetate.com">Monetate</a> <span class="sub">- 2015</span></p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/img/ylw.png">
+          <div class="cardInfo">
+            <p><i>Intro To Programming</i> TA</p>
+            <p><a href="http://pennhealthx.com">Penn HealthX</a> <span class="sub">- 2015</span></p>
+          </div>
+        </div>
+
+      </div> <!-- SECTION 1 -->
+
+      <br>
+
+      <div id="section2"> <!-- SECTION 2 -->
+        <h3>Things I Do</h3>
+
+        <div class="card">
+          <img src="assets/img/grn.png">
+          <div class="cardInfo">
+            <p>Co-Founder</p>
+            <p><a href="http://hackdavis.io">HackDavis</a> <span class="sub"> - 2015 ~ present</span></p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/img/grn.png">
+          <div class="cardInfo">
+            <p>Instructor</p>
+            <p><a href="http://girlswhocode.com">Girls Who Code</a><span class="sub"> - 2015 ~ 2016</span></p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/img/grn.png">
+          <div class="cardInfo">
+            <p>Officer</p>
+            <p><a href="http://daviscsclub.org">Davis CS Club</a><span class="sub"> - 2015</span></p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/img/grn.png">
+          <div class="cardInfo">
+            <p>Business & Finance Commissioner</p>
+            <p><a href="https://asucd.ucdavis.edu/government/legislative/commissions/business-and-finance-commission/">ASUCD</a><span class="sub"> - 2013 ~ present</span></p>
+          </div>
+        </div>
+
+      </div> <!-- SECTION 2 -->
+
+      <br>
+
+      <div id="section3"> <!-- SECTION 3 -->
+        <h3>Honors</h3>
+
+        <div class="card">
+          <img src="assets/img/bl.png">
+          <div class="cardInfo">
+            <p>Grace Hopper Scholar</p>
+            <p><a href="http://anitaborg.org/awards-grants/ghc-scholarship-grants/">Anita Borg Institute</a><span class="sub"> - 2016</span></p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/img/bl.png">
+          <div class="cardInfo">
+            <p>Best Veteran's Hack</p>
+            <p><a href="http://devpost.com/software/auxi">CalHacks</a><span class="sub"> - 2016</span></p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/img/bl.png">
+          <div class="cardInfo">
+            <p>1st place Amazon Alexa<br>2nd place IBM BlueMix</p>
+            <p><a href="http://devpost.com/software/airscribe">TreeHacks</a><span class="sub"> - 2016</span></p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/img/bl.png">
+          <div class="cardInfo">
+            <p>Engineering Diversity Scholar</p>
+            <p><a href="http://boxdiversityscholarship.com">Box</a><span class="sub"> - 2015</span></p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/img/bl.png">
+          <div class="cardInfo">
+            <p>PennApps Fellow</p>
+            <p><a href="http://pennappsfellows.com">PennApps Fellows</a><span class="sub"> - 2015</span></p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/img/bl.png">
+          <div class="cardInfo">
+            <p>Twitter Flight Scholarship</p>
+            <p><a href="https://dev.twitter.com/flight/2015">Twitter Flight</a><span class="sub"> - 2015</span></p>
+          </div>
+        </div>
+
+      </div> <!-- SECTION 3 -->
+
+    </div> <!-- TEXT -->
+  </div> <!-- CONTENT -->
+</body>
