Updated to most recent info

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <a class="icon yellow" href="http://github.com/cszhu"><i class="fa fa-lg fa-github"></i></a>
         <a class="icon green" href="http://linkedin.com/in/christinaszhu"><i class="fa fa-lg fa-linkedin"></i></a>
         <a class="icon blue" href="mailto:cszhu@ucdavis.edu"><i class="fa fa-lg fa-envelope"></i></a>
-        <a class="icon purple" href="http://cszhu.github.io/resume.pdf"><i class="fa fa-lg fa-file"></i></a>
+        <a class="icon purple" href="https://drive.google.com/file/d/0B4mdpXMZ2reyNl9tSWtSNUp5Vkk/view?usp=sharing"><i class="fa fa-lg fa-file"></i></a>
       </div>
     </div>
   </div>
@@ -66,14 +66,14 @@
 
       <div id="section0"> <!-- SECTION 0 -->
         <h3>Hello!</h3>
-        <p>I'm Christina! I'm studying Computer Science at UC Davis, graduating June 2017. Here are some things that I'm passionate about:
+        <p>I'm Christina! I am a Software Developer, HackNY Fellow '17, and HackDavis Co-Founder. Here are some of the things I'm passionate about:
           <ul>
-            <li> Developer advocacy </li>
             <li> Diversity in tech </li>
             <li> Hackathons </li>
             <li> Startups and entrepreneurship </li>
+            <li> Art! </li>
           </ul>
-          Feel free to reach out!! I love meeting new people!
+          Feel free to reach out! I love meeting new people.
           <br>
         </p>
       </div> <!-- SECTION 0 -->
@@ -82,11 +82,20 @@
 
       <div id="section"> <!-- SECTION 1 -->
         <h3>Work</h3>
+
         <div class="card">
           <img src="assets/img/ylw.png">
           <div class="cardInfo">
-            <p>Application Developer</p>
-            <p><a href="http://www.caes.ucdavis.edu/">UC Davis CAES</a><br><span class="sub"> - 2016 ~ present</span></p>
+            <p>Frontend Engineering Intern</p>
+            <p><a href="http://www.clarifai.edu/">Clarifai (hackNY '17)</a><br><span class="sub"> - 2017</span></p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/img/ylw.png">
+          <div class="cardInfo">
+            <p>Fullstack Student Application Developer</p>
+            <p><a href="http://www.caes.ucdavis.edu/">UC Davis CAES</a><br><span class="sub"> - 2016 ~ 2017</span></p>
           </div>
         </div>
 
@@ -132,8 +141,16 @@
         <div class="card">
           <img src="assets/img/grn.png">
           <div class="cardInfo">
+            <p>hackNY Fellow '17</p>
+            <p><a href="http://hackny.org">hackNY</a> <span class="sub"> - 2017</span></p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/img/grn.png">
+          <div class="cardInfo">
             <p>Co-Founder</p>
-            <p><a href="http://hackdavis.io">HackDavis</a> <span class="sub"> - 2015 ~ present</span></p>
+            <p><a href="http://hackdavis.io">HackDavis</a> <span class="sub"> - 2015 ~ 2017</span></p>
           </div>
         </div>
 
@@ -157,7 +174,7 @@
           <img src="assets/img/grn.png">
           <div class="cardInfo">
             <p>Business & Finance Commissioner</p>
-            <p><a href="https://asucd.ucdavis.edu/government/legislative/commissions/business-and-finance-commission/">ASUCD</a><span class="sub"> - 2013 ~ present</span></p>
+            <p><a href="https://asucd.ucdavis.edu/government/legislative/commissions/business-and-finance-commission/">ASUCD</a><span class="sub"> - 2013 ~ 2017</span></p>
           </div>
         </div>
 
@@ -167,6 +184,14 @@
 
       <div id="section3"> <!-- SECTION 3 -->
         <h3>Honors</h3>
+
+        <div class="card">
+          <img src="assets/img/bl.png">
+          <div class="cardInfo">
+            <p>SIGNAL Scholarship</p>
+            <p><a href="https://signal.twilio.com/">Twilio</a><span class="sub"> - 2017</span></p>
+          </div>
+        </div>
 
         <div class="card">
           <img src="assets/img/bl.png">
