--- a/more.html
+++ b/more.html
@@ -51,7 +51,7 @@
           <a class="icon yellow" href="http://github.com/cszhu"><i class="fa fa-lg fa-github"></i></a>
           <a class="icon green" href="http://linkedin.com/in/christinaszhu"><i class="fa fa-lg fa-linkedin"></i></a>
           <a class="icon blue" href="mailto:cszhu@ucdavis.edu"><i class="fa fa-lg fa-envelope"></i></a>
-          <a class="icon purple" href="http://cszhu.github.io/resume.pdf"><i class="fa fa-lg fa-file"></i></a>
+          <a class="icon purple" href="https://drive.google.com/file/d/0B4mdpXMZ2reyNl9tSWtSNUp5Vkk/view?usp=sharing"><i class="fa fa-lg fa-file"></i></a>
         </div>
       </div>
     </div>
@@ -64,7 +64,7 @@
         </div>
         <div id="section0">
          <h3>A little more...</h3>
-         <p>When I'm not in school or studying for midterms, these are a few of the things I love doing - giving back to the community and participating in hackathons. </p>
+         <p>At heart, I am a creative person and love to express myself whether it be through code or through art. Here are some of my side projects so you see where I like to spend my time!</p>
        </div>
        <br>
 
@@ -179,6 +179,22 @@
       <br>
       <div id="section3">
         <h3>Events</h3>
+
+        <div class="card">
+          <img src="assets/img/bl.png">
+          <div class="cardInfo">
+            <p><a href="https://bytehacks.org/"><b>ByteHacks 2017</b></a></p>
+            <p><span class="sub">June 24 - 15, 2017</span></p>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="assets/img/bl.png">
+          <div class="cardInfo">
+            <p><a href="https://hackdavis.io/"><b>HackDavis 2017</b></a></p>
+            <p><span class="sub">Jan 15 - 17, 2017</span></p>
+          </div>
+        </div>
 
         <div class="card">
           <img src="assets/img/bl.png">
