--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <!-- Favicon -->
   <link rel="icon" href="favicon.jpg">
-  
+
   <!-- Bootstrap core CSS -->
   <link href="assets/css/bootstrap.css" rel="stylesheet">
 
@@ -35,214 +35,46 @@
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 
   <!-- Fonts -->
-  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-  <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito|Quicksand|Rubik|Work+Sans" rel="stylesheet">
 </head>
 
 <body>
-  <div class="content">
-    <div id="photo">
-      <img id="pic" src="assets/img/bwavatarofme.png">
-    </div>
-    <div class="column">
-      <center><img src="assets/img/rainbow.gif"></center>
-      <div id="title">CHRISTINA ZHU<br></div>
+  <div class="container">
+    <div class="item left">
+      <center><img src="https://pbs.twimg.com/profile_images/1057131480898359296/oNJnN5ie_400x400.jpg"></center><br>
+      <div id="title"><center><b>CHRISTINA ZHU</b><center></div>
       <div id="icons">
         <a class="icon red" href="http://twitter.com/cszhu"><i class="fa fa-lg fa-twitter"></i></a>
         <a class="icon yellow" href="http://github.com/cszhu"><i class="fa fa-lg fa-github"></i></a>
         <a class="icon green" href="http://linkedin.com/in/christinaszhu"><i class="fa fa-lg fa-linkedin"></i></a>
-        <a class="icon blue" href="mailto:cszhu@ucdavis.edu"><i class="fa fa-lg fa-envelope"></i></a>
-        <a class="icon purple" href="https://drive.google.com/file/d/0B4mdpXMZ2reyNl9tSWtSNUp5Vkk/view?usp=sharing"><i class="fa fa-lg fa-file"></i></a>
+        <a class="icon blue" href="mailto:zhu.s.christina@gmail.com"><i class="fa fa-lg fa-envelope"></i></a>
+        <a class="icon purple" href="https://drive.google.com/file/d/19RPQZND5Ua_hapnNhciBXJ5N32Um9Igk/view?usp=sharing"><i class="fa fa-lg fa-file"></i></a>
       </div>
     </div>
+    <div class="item right">
+      <div id="title"><b>Who is she?</b></div>
+      <p>Currently, I'm a Software Developer @ Amazon, HackNY Fellow '17, and HackDavis Co-Founder.
+        Here are some of the things I'm passionate about:</p>
+        <ul>
+          <li>Diversity & social good</li>
+          <li>Speaking at conferences</li>
+          <li>Startups</li>
+        </ul>
+      <p>Feel free to reach out! I love meeting new people.</p>
+
+      <div id="title"><b>Speaking</b></div>
+      <p> One of my hobbies is speaking at conferences. Follow me on Twitter to see
+      where I'm headed next!</p>
+      <ul>
+        <li><b>Javascript, Tech, and Social Good</b> @ <a href="https://osem.seagl.org/conferences/seagl2018/program/proposals/456">SeaGL</a>, <i>Nov 9, 2018</i></li>
+        <li><b>Introduction to Blockchain & Cryptokitties</b> @ <a href="https://werise.tech/">WeRISE Tech</a>, <i>Jun 22, 2018</i></li>
+        <li><b>The Intersection of Tech x Social Good</b> @ <a href="https://developer.ibm.com/indexconf/agenda/">Index SF</a>, <i>Feb 21, 2018</i></li>
+        <li><b>Diversity In Tech Panelist</b> @ <a href="https://calhacks.io/">CalHacks</a>, <i>Nov 12, 2016</i></li>
+        <li><b>Introduction to Web Development</b> @ <a href="https://hackdavis.io">HackDavis</a>, <i>Nov 2, 2016</i></li>
+        <li><b>How To Publish Your First NPM Module</b> @ <a href="https://www.codingdojo.com/">Coding Dojo</a>, <i>Apr 28, 2016</i></li>
+        <li><b>Gender Diversity In Tech: Learn, Educate, Empower</b> @ <a href="https://daviscsclub.org"/>Davis CS Club</a>, <i>May 25, 2016</i></li>
+        <li><b>Hackathons Demystified</b> @ <a href="https://hackdavis.io">HackDavis</a>, <i>Feb 2, 2016</i></li>
+      </ul>
+    </div>
   </div>
-
-  <div class="content">
-    <div id="text">
-      <div id="nav" class="card">
-        <div id="work" class="navbar"><a href="index.html"><h3>Work</h3></a></div>
-        <div id="hack2" class="navbar"><a href="more.html"><h3>Hack</h3></a></div>
-      </div>
-
-      <div id="section0"> <!-- SECTION 0 -->
-        <h3>Hello!</h3>
-        <p>I'm Christina! I am a Software Developer, HackNY Fellow '17, and HackDavis Co-Founder. Here are some of the things I'm passionate about:
-          <ul>
-            <li> Diversity in tech </li>
-            <li> Hackathons </li>
-            <li> Startups and entrepreneurship </li>
-            <li> Art! </li>
-          </ul>
-          Feel free to reach out! I love meeting new people.
-          <br>
-        </p>
-      </div> <!-- SECTION 0 -->
-
-      <br>
-
-      <div id="section"> <!-- SECTION 1 -->
-        <h3>Work</h3>
-
-        <div class="card">
-          <img src="assets/img/ylw.png">
-          <div class="cardInfo">
-            <p>Frontend Engineering Intern</p>
-            <p><a href="http://www.clarifai.edu/">Clarifai (hackNY '17)</a><br><span class="sub"> - 2017</span></p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/img/ylw.png">
-          <div class="cardInfo">
-            <p>Fullstack Student Application Developer</p>
-            <p><a href="http://www.caes.ucdavis.edu/">UC Davis CAES</a><br><span class="sub"> - 2016 ~ 2017</span></p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/img/ylw.png">
-          <div class="cardInfo">
-            <p>Software Engineering Intern</p>
-            <p><a href="http://amazon.com">Amazon</a> <span class="sub">- 2016</span></p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/img/ylw.png">
-          <div class="cardInfo">
-            <p>Devangelist (Remote)</p>
-            <p><a href="http://blog.clarifai.com/introducing-the-clarifai-champions/"> Clarifai Champions</a><span class="sub"> - 2016</span></p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/img/ylw.png">
-          <div class="cardInfo">
-            <p>Software Engineering Intern</p>
-            <p><a href="http://monetate.com">Monetate</a> <span class="sub">- 2015</span></p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/img/ylw.png">
-          <div class="cardInfo">
-            <p><i>Intro To Programming</i> TA</p>
-            <p><a href="http://pennhealthx.com">Penn HealthX</a> <span class="sub">- 2015</span></p>
-          </div>
-        </div>
-
-      </div> <!-- SECTION 1 -->
-
-      <br>
-
-      <div id="section2"> <!-- SECTION 2 -->
-        <h3>Things I Do</h3>
-
-        <div class="card">
-          <img src="assets/img/grn.png">
-          <div class="cardInfo">
-            <p>hackNY Fellow '17</p>
-            <p><a href="http://hackny.org">hackNY</a> <span class="sub"> - 2017</span></p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/img/grn.png">
-          <div class="cardInfo">
-            <p>Co-Founder</p>
-            <p><a href="http://hackdavis.io">HackDavis</a> <span class="sub"> - 2015 ~ 2017</span></p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/img/grn.png">
-          <div class="cardInfo">
-            <p>Instructor</p>
-            <p><a href="http://girlswhocode.com">Girls Who Code</a><span class="sub"> - 2015 ~ 2016</span></p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/img/grn.png">
-          <div class="cardInfo">
-            <p>Officer</p>
-            <p><a href="http://daviscsclub.org">Davis CS Club</a><span class="sub"> - 2015</span></p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/img/grn.png">
-          <div class="cardInfo">
-            <p>Business & Finance Commissioner</p>
-            <p><a href="https://asucd.ucdavis.edu/government/legislative/commissions/business-and-finance-commission/">ASUCD</a><span class="sub"> - 2013 ~ 2017</span></p>
-          </div>
-        </div>
-
-      </div> <!-- SECTION 2 -->
-
-      <br>
-
-      <div id="section3"> <!-- SECTION 3 -->
-        <h3>Honors</h3>
-
-        <div class="card">
-          <img src="assets/img/bl.png">
-          <div class="cardInfo">
-            <p>SIGNAL Scholarship</p>
-            <p><a href="https://signal.twilio.com/">Twilio</a><span class="sub"> - 2017</span></p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/img/bl.png">
-          <div class="cardInfo">
-            <p>Grace Hopper Scholar</p>
-            <p><a href="http://anitaborg.org/awards-grants/ghc-scholarship-grants/">Anita Borg Institute</a><span class="sub"> - 2016</span></p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/img/bl.png">
-          <div class="cardInfo">
-            <p>Best Veteran's Hack</p>
-            <p><a href="http://devpost.com/software/auxi">CalHacks</a><span class="sub"> - 2016</span></p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/img/bl.png">
-          <div class="cardInfo">
-            <p>1st place Amazon Alexa<br>2nd place IBM BlueMix</p>
-            <p><a href="http://devpost.com/software/airscribe">TreeHacks</a><span class="sub"> - 2016</span></p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/img/bl.png">
-          <div class="cardInfo">
-            <p>Engineering Diversity Scholar</p>
-            <p><a href="http://boxdiversityscholarship.com">Box</a><span class="sub"> - 2015</span></p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/img/bl.png">
-          <div class="cardInfo">
-            <p>PennApps Fellow</p>
-            <p><a href="http://pennappsfellows.com">PennApps Fellows</a><span class="sub"> - 2015</span></p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img src="assets/img/bl.png">
-          <div class="cardInfo">
-            <p>Twitter Flight Scholarship</p>
-            <p><a href="https://dev.twitter.com/flight/2015">Twitter Flight</a><span class="sub"> - 2015</span></p>
-          </div>
-        </div>
-
-      </div> <!-- SECTION 3 -->
-
-    </div> <!-- TEXT -->
-  </div> <!-- CONTENT -->
 </body>
