Fixed some text stuff

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     </div>
     <div class="item right">
       <div id="title"><b>Who is she?</b></div>
-      <p>Currently, I'm a Software Developer @ Amazon, HackNY Fellow '17, and HackDavis Co-Founder.
+      <p>My name is Christina, and I'm a Software Developer @ Amazon, HackNY Fellow '17, and HackDavis Co-Founder.
         Here are some of the things I'm passionate about:</p>
         <ul>
           <li>Diversity & social good</li>
-          <li>Speaking at conferences</li>
+          <li>Technical speaking</li>
           <li>Startups</li>
         </ul>
       <p>Feel free to reach out! I love meeting new people.</p>
