--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
   <div class="container">
     <div class="item left">
-      <center><img src="https://pbs.twimg.com/profile_images/1057131480898359296/oNJnN5ie_400x400.jpg"></center><br>
+      <center><img src="assets/img/me.jpg" id="avatar"></center><br>
       <div id="title"><center><b>CHRISTINA ZHU</b><center></div>
       <div id="icons">
         <a class="icon red" href="http://twitter.com/cszhu"><i class="fa fa-lg fa-twitter"></i></a>
