oops update resume for real

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a class="icon yellow" href="http://github.com/cszhu"><i class="fa fa-lg fa-github"></i></a>
         <a class="icon green" href="http://linkedin.com/in/christinaszhu"><i class="fa fa-lg fa-linkedin"></i></a>
         <a class="icon blue" href="mailto:zhu.s.christina@gmail.com"><i class="fa fa-lg fa-envelope"></i></a>
-        <a class="icon purple" href="https://drive.google.com/file/d/19RPQZND5Ua_hapnNhciBXJ5N32Um9Igk/view?usp=sharing"><i class="fa fa-lg fa-file"></i></a>
+        <a class="icon purple" href="resume.pdf"><i class="fa fa-lg fa-file"></i></a>
       </div>
     </div>
     <div class="item right">
