maybe ill add audio later

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 <body>
   <div class="container">
     <div class="item left">
-      <center><img src="assets/img/me.jpg" id="avatar"></center><br>
       <div id="title"><center><b>CHRISTINA ZHU</b><center></div>
       <div id="icons">
         <a class="icon red" href="http://twitter.com/cszhu"><i class="fa fa-lg fa-twitter"></i></a>
@@ -46,7 +45,9 @@
         <a class="icon green" href="http://linkedin.com/in/christinaszhu"><i class="fa fa-lg fa-linkedin"></i></a>
         <a class="icon blue" href="mailto:zhu.s.christina@gmail.com"><i class="fa fa-lg fa-envelope"></i></a>
         <a class="icon purple" href="resume.pdf"><i class="fa fa-lg fa-file"></i></a>
+
       </div>
+      <!-- <audio src="assets/SAINT PEPSI - Skylar Spence.mp3" controls></audio> -->
     </div>
     <div class="item right">
       <div id="title"><b>Who is she?</b></div>
